--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.4",
-        "@popperjs/core": "^2.10.2",
-        "axios": "^1.1.2",
-        "bootstrap": "~5.2.3",
-        "cross-env": "^7.0.3",
-        "laravel-vite-plugin": "^0.7.2",
-        "node-sass": "^8.0.0",
-        "onscreen": "1.3.4",
+        "@fortawesome/fontawesome-free": "^6.6.0",
+        "@popperjs/core": "^2.11.6",
+        "axios": "^1.7.2",
+        "bootstrap": "^5.2.3",
+        "laravel-vite-plugin": "^1.0",
         "resolve-url-loader": "4.0.0",
-        "sass": "^1.59.3",
-        "simplebar": "^5.3.6",
+        "sass": "^1.56.1",
+        "simplebar": "^6.2.7",
         "smooth-scroll": "^16.1.3",
-        "vite": "^4.0.0"
+        "vite": "^5.0"
     }
 }
